[package]
name = "subscription-proxy-vsock"
version = "0.1.0"
authors = ["Дамјан Георгиевски <gdamjan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-h1 = "1.1.0"
async-std = { version = "1.5", features = ["attributes"] }
http-types = "1.1.1"
libc = "0.2"
lazy_static = "1.4.0"
rand = "0.7"
