[package]
name = "subscription-proxy-vsock"
version = "0.2.0"
authors = ["Дамјан Георгиевски <gdamjan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-h1 = "2.1.0"
async-std = { version = "1.6", features = ["attributes"] }
http-types = "2.5.0"
libc = "0.2"
lazy_static = "1.4.0"
rand = "0.7"
