[package]
name = "subscription-proxy-vsock"
version = "0.3.0"
authors = ["Дамјан Георгиевски <gdamjan@gmail.com>"]
edition = "2021"

[dependencies]
async-h1 = "2.3.2"
async-std = { version = "1.10.0", features = ["attributes"] }
http-types = "2.12.0"
libc = "0.2"
lazy_static = "1.4.0"
rand = "0.8.4"
